--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "serve": "node server"
   },
   "dependencies": {
+    "antd": "^3.26.0",
+    "koa": "^2.11.0",
+    "koa-router": "^7.4.0",
     "next": "9.1.4",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "babel-plugin-import": "^1.13.0"
   }
 }
