--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,18 @@
 {
-  "presets": ["next/babel"],
+  "presets": [
+    "next/babel"
+  ],
   "plugins": [
     [
       "import",
       {
         "libraryName": "antd"
+      }
+    ],
+    [
+      "styled-components",
+      {
+        "ssr": true
       }
     ]
   ]
